--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,7 @@ nav.close .icon .line2 {
 
 
 
+
 /* CLICK-ME ICON STYLES */
 .click-me {
     position: absolute;
@@ -161,5 +162,83 @@ nav.close .icon .line2 {
         top: 1.5rem;
         left: 1.5rem;
         opacity: 1;
+    }
+}
+
+
+
+
+
+/*  PROJECT INFO STYLES */
+.project_info {
+    background-color: rgba(0, 0, 0, 0.3);
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.project_info_card {
+    width: 70%;
+    max-width: 500px;
+    background-color: #fff;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    padding: 30px;
+
+    /* serves as reference to absolutely positioned children */
+    position: relative;
+}
+
+.project_info_img {
+    width: 85%;
+    min-width: 212px;
+}
+
+.project_info_card p {
+    font-style: italic;
+    font-weight: 400;
+}
+
+.project_info_card h2 {
+    margin-top: 1.5rem;
+    margin-bottom: 0.2rem;
+}
+
+.project_info_card .close {
+    font-size: 2.5rem;
+    position: absolute;
+    top: -0.1rem;
+    right: -0.1rem;
+}
+
+
+
+@media screen and (max-width: 450px) {
+    .project_info_card h2 {
+        font-size: 1.2rem;
+    }
+
+    .project_info_card p {
+        font-size: 0.9rem;
+    }
+
+    .project_info_card {
+        width: 80%;
+        padding: 30px 10px;
+    }
+
+    .project_info_card .close {
+        font-size: 2.0rem;
+        right: -0.3rem;
+        /* "top: -2rem;" */
     }
 }
